examples/multi-path/gce-multi-path-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap
spec:
  backend:
    # Re-use echoheadersx as the default backend so we stay under the default
    # quota for gce BackendServices.
    serviceName: echoheadersx
    servicePort: 80
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoheadersx
          servicePort: 80
  - host: bar.baz.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echoheadersy
          servicePort: 80
      - path: /foo
        backend:
          serviceName: echoheadersx
          servicePort: 80
